# wasm-timer

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh
public/: index.html
public/ts/: timer.ts
src/: lib.rs
